# pySigma-backend-mongodb

./: .gitignore  README.md  pyproject.toml
sigma/backends/: mongodb.py
tests/: test_backend_mongodb.py
