[tool.poetry]
name = "pysigma-backend-mongodb"
version = "0.1.1"
description = "pySigma Mongodb backend"
authors = ["Areg Baghinyan <areg@baghinyan.com>"]
readme = "README.md"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.12"
pysigma = "^0.11"
regex = "^2024.7.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
